--- a/MagicOfGathering/src/HamsterMagicTheGathering.mxml
+++ b/MagicOfGathering/src/HamsterMagicTheGathering.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
-	applicationComplete="appCompleteHandler()" width="1000" height="700"
+	applicationComplete="appCompleteHandler()" width="1000" height="700" showStatusBar="false"
 	backgroundColor="black" xmlns:popup="noorg.magic.controls.common.buttons.popup.*">
 	<mx:Script source="HamsterMagicTheGatheringAs.as" />
 	<mx:Metadata>
