--- a/MagicOfGathering/src/noorg/magic/css/Component.css
+++ b/MagicOfGathering/src/noorg/magic/css/Component.css
@@ -1,5 +1,28 @@
 /* CSS file */
 ComboBox {
-	focusRoundedCorners : "";
-	/*selectionColor : #FF1234;*/
+  cornerRadius : 0;	
+  color : #000000;
+  textSelectedColor : #000000;
+  textRollOverColor : #888888;
+}
+
+Button {
+  cornerRadius : 0;	
+  color : #000000;
+  textSelectedColor : #000000;
+  textRollOverColor : #888888;
+}
+
+TextInput {
+  backgroundColor : #4FC0FF;
+  backgroundAlpha : 0.1;
+  borderThickness : 1;
+  borderStyle : solid;
+  
+}
+
+global {
+  fontSize : 11;	
+  fillAlphas : 0.1, 0.3;
+  fillColors : #4FC0FF, #4FC0FF;
 }
