--- a/MagicOfGathering/src/HamsterMagicTheGathering.mxml
+++ b/MagicOfGathering/src/HamsterMagicTheGathering.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
 	applicationComplete="appCompleteHandler()" width="1000" height="700" showStatusBar="false"
-	backgroundColor="black" xmlns:popup="noorg.magic.controls.common.buttons.popup.*">
+	backgroundColor="black" xmlns:popup="noorg.magic.controls.common.buttons.popup.*" xmlns:tips="noorg.magic.controls.popups.tips.*">
 	<mx:Script source="HamsterMagicTheGatheringAs.as" />
 	<mx:Metadata>
 		[ResourceBundle("main")]
@@ -9,4 +9,6 @@
 		[ResourceBundle("component")]
 	</mx:Metadata>
 	<mx:Style source="/noorg/magic/css/Component.css" />
+	
+	<tips:CardDetailTip id="cardDetailTip" />
 </mx:WindowedApplication>
