--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayMenuContainer.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayMenuContainer.mxml
@@ -5,5 +5,6 @@
 	<mx:Script source="PlayMenuContainerAs.as" />
 	<buttons:PlayMenuPlayerButton id="playerButton1" x="5" click="playBtn1ClickHandler()" />
 	<buttons:PlayMenuPlayerButton id="playerButton2" x="45" click="playBtn2ClickHandler()" />
+	<buttons:PlayMenuSettingsButton id="settingsButton" right="45" click="popupSettingsHandler()" />
 	<buttons:PlayMenuLeaveButton id="leaveButton" right="5" click="leaveBtnClickHandler()" />	
 </mx:Canvas>
