--- a/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayUtilContainer.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/play/containers/PlayUtilContainer.mxml
@@ -7,4 +7,6 @@
 		click="untapAll()" />
 	<common:CommonButton text="{this.resourceManager.getString('main','play.tapAllLand')}"
 		click="tapAllLand()" />
+	<common:CommonButton text="{this.resourceManager.getString('main','play.attack')}"
+		click="beginAttack()" />
 </mx:VBox>
