--- a/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/attack/AttackDefUnit.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/attack/AttackDefUnit.mxml
@@ -11,12 +11,12 @@
 		]]>
 	</mx:Script>
 	<mx:Image id="attackerCardImage" width="{Constants.PLAY_CARD_WIDTH}" height="{Constants.PLAY_CARD_HEIGHT}"
-		 source="{_attackImgSource}" />
-	<mx:HRule height="100%" />
+		 source="{_attackImgSource}" click="attClickHandler(event)" />
+	<mx:VRule height="100%" />
 	<mx:HorizontalList id="defenseCardList" x="{Constants.PLAY_CARD_WIDTH + 10}" width="100%" 
 		height="{Constants.PLAY_CARD_HEIGHT}"
-		itemRenderer="noorg.magic.controls.play.renderer.AttackDefCardRenderer"
-		dragEnabled="true" dataProvider="{defCardList}" borderStyle="none" 
+		itemRenderer="noorg.magic.controls.play.renderer.AttCardRenderer"
+		dataProvider="{defCardList}" borderStyle="none" itemClick="defItemClickHandler(event)"
 		dragEnter="defDragEnterHandler(event)" dragDrop="defDragDropHandler(event)"/>
 		
 	
