--- a/trunk/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/attack/AttackDefUnit.mxml
+++ b/trunk/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/attack/AttackDefUnit.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="{Constants.PLAY_CARD_HEIGHT}"
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="{Constants.PLAY_CARD_HEIGHT + 2}"
+	 creationComplete="completeHandler()"
 	xmlns:containers="noorg.magic.controls.containers.*" 
 	xmlns:unit="noorg.magic.controls.unit.*" 
 	xmlns:unit1="noorg.magic.controls.play.unit.*">
@@ -12,12 +13,12 @@
 	</mx:Script>
 	<mx:Image id="attackerCardImage" width="{Constants.PLAY_CARD_WIDTH}" height="{Constants.PLAY_CARD_HEIGHT}"
 		 source="{_attackImgSource}" click="attClickHandler(event)" />
-	<mx:VRule height="100%" />
+	<mx:VRule height="100%" width="2" strokeColor="black" x="{Constants.PLAY_CARD_WIDTH + 6}" />
 	<mx:HorizontalList id="defenseCardList" x="{Constants.PLAY_CARD_WIDTH + 10}" width="100%" 
-		height="{Constants.PLAY_CARD_HEIGHT}"
+		height="{Constants.PLAY_CARD_HEIGHT + 2}"
 		itemRenderer="noorg.magic.controls.play.renderer.AttCardRenderer"
 		dataProvider="{defCardList}" borderStyle="none" itemClick="defItemClickHandler(event)"
 		dragEnter="defDragEnterHandler(event)" dragDrop="defDragDropHandler(event)"/>
 		
-	
-</mx:Canvas>
+	<mx:Label id="attackNumLabel" width="50" fontSize="35" text="{_attackNum}" />
+</mx:HBox>
