--- a/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/AttackPopup.mxml
+++ b/MagicOfGathering/src/noorg/magic/controls/play/popups/actions/AttackPopup.mxml
@@ -8,7 +8,7 @@
 		]]>
 	</mx:Script>
 	<mx:HBox width="100%" height="{Constants.PLAY_CARD_HEIGHT + 2}">
-		<mx:Image width="104" height="104" source="/noorg/magic/assets/pics/attack_bg.jpg" /> 
+		<mx:Image width="104" height="104" source="@Embed(source='/noorg/magic/assets/pics/attack_bg.jpg')" /> 
 		<mx:HorizontalList id="attackCardList" width="100%" height="100%"
 			itemRenderer="noorg.magic.controls.play.renderer.AttCardRenderer" borderStyle="none"
 			dataProvider="{attackerCreatureList}" paddingTop="0" paddingBottom="0"
@@ -24,9 +24,12 @@
 	<mx:VBox id="attackDefBox" width="100%" height="100%" />
 	
 	<mx:HBox width="100%" height="{Constants.PLAY_CARD_HEIGHT + 2}">
-		<mx:Image width="104" height="104" source="/noorg/magic/assets/pics/defense_bg.jpg" /> 
+		<mx:Image width="104" height="104" source="@Embed(source='/noorg/magic/assets/pics/defense_bg.jpg')" /> 
 		<mx:HorizontalList id="defenseCardList" width="100%" height="100%"
 			itemRenderer="noorg.magic.controls.play.renderer.DefCardRenderer" borderStyle="none"
 			backgroundAlpha="0.6" dataProvider="{defenseCreatureList}" paddingTop="0" paddingBottom="0" />
+		<mx:VBox width="40" height="100%">
+			
+		</mx:VBox>
 	</mx:HBox>
 </mx:Panel>
