--- a/trunk/HsGameSaver/src/HsGameSaver.mxml
+++ b/trunk/HsGameSaver/src/HsGameSaver.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
+	width="800" height="600"
 	applicationComplete="completeHandler()" xmlns:views="org.hamster.gamesaver.controls.views.*"
-	backgroundColor="#DDDDDD">
+	backgroundColor="#EEEEEE">
 	<mx:Metadata>
 		[ResourceBundle("main")]
 	</mx:Metadata>
