--- a/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/views/PathConfView.mxml
+++ b/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/views/PathConfView.mxml
@@ -2,33 +2,46 @@
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%"
 	creationComplete="completeHandler()">
 	<mx:Script source="PathConfViewAs.as" />
-
-	<mx:TextInput id="nameInput" width="150" />
+	<mx:HBox>
+		<mx:Label text="{this.resourceManager.getString('main', 'pathConfView.inputName')}" width="200" />
+		<mx:TextInput id="nameInput" width="150" restrict="a-zA-Z0-9_" />
+	</mx:HBox>
 	<mx:HBox width="100%">
-		<mx:TextInput id="pathInput" width="400" />
+		<mx:Label text="{this.resourceManager.getString('main', 'pathConfView.inputPath')}" width="200" />
+		<mx:TextInput id="pathInput" width="350" />
 		<mx:Button label="Browse" click="browsePath()" />
 	</mx:HBox>
 	<mx:HBox width="100%">
-		<mx:TextInput id="savePathInput" width="400" />
+		<mx:Label text="{this.resourceManager.getString('main', 'pathConfView.inputSavePath')}" width="200" />
+		<mx:TextInput id="savePathInput" width="350" />
 		<mx:Button label="Browse" click="browseSavePath()" />
 	</mx:HBox>
+	<mx:HBox>
+		<mx:Label text="{this.resourceManager.getString('main', 'pathConfView.inputIncludes')}" width="200" />
+		<mx:TextInput id="includesInput" width="200" />
+	</mx:HBox>
+	<mx:HBox>
+		<mx:Label text="{this.resourceManager.getString('main', 'pathConfView.inputExcludes')}" width="200" />
+		<mx:TextInput id="excludesInput" width="200" />
+	</mx:HBox>
 	
-	<mx:TextInput id="includesInput" width="200" />
-	<mx:TextInput id="excludesInput" width="200" />
+	<mx:HBox>
+
+		<mx:Button label="{this.resourceManager.getString('main', 'add')}" click="addHandler()" />
+		<mx:Button label="{this.resourceManager.getString('main', 'remove')}" click="removeSelectedItemHandler()" />
+		<mx:Button label="{this.resourceManager.getString('main', 'save')}" click="saveToFileHandler()" />
+	</mx:HBox>
 	
-	<mx:Button label="add" click="addHandler()" />
 	<mx:DataGrid id="mainDataGrid" dataProvider="{_gameArray}" width="100%">
 		<mx:columns>
-			<mx:DataGridColumn headerText="Column 1" dataField="name" width="100"/>
-			<mx:DataGridColumn headerText="Column 2" dataField="path"/>
-			<mx:DataGridColumn headerText="Column 3" dataField="savePath"/>
-			<mx:DataGridColumn headerText="Column 4" dataField="includes"/>
-			<mx:DataGridColumn headerText="Column 5" dataField="excludes"/>
+			<mx:DataGridColumn headerText="{this.resourceManager.getString('main', 'pathConfView.column.name')}" dataField="name" width="100"/>
+			<mx:DataGridColumn headerText="{this.resourceManager.getString('main', 'pathConfView.column.path')}" dataField="path"/>
+			<mx:DataGridColumn headerText="{this.resourceManager.getString('main', 'pathConfView.column.savePath')}" dataField="savePath"/>
+			<mx:DataGridColumn headerText="{this.resourceManager.getString('main', 'pathConfView.column.includes')}" dataField="includes" width="50"/>
+			<mx:DataGridColumn headerText="{this.resourceManager.getString('main', 'pathConfView.column.excludes')}" dataField="excludes" width="50"/>
 		</mx:columns>
 	</mx:DataGrid>
 	<mx:HBox width="100%">
-		<mx:Button label="Remove Selected" click="removeSelectedItemHandler()" />
-		<mx:Button label="Save" click="saveToFileHandler()" />
-		<mx:Button label="Zip" click="zipFileHandler()" />
+		<mx:Button label="{this.resourceManager.getString('main', 'pathConfView.zip')}" click="zipFileHandler()" />
 	</mx:HBox>
 </mx:VBox>
