--- a/HsGameSaver/src/org/hamster/gamesaver/controls/views/PathConfView.mxml
+++ b/HsGameSaver/src/org/hamster/gamesaver/controls/views/PathConfView.mxml
@@ -44,4 +44,5 @@
 	<mx:HBox width="100%">
 		<mx:Button label="{this.resourceManager.getString('main', 'pathConfView.zip')}" click="zipFileHandler()" />
 	</mx:HBox>
+	<mx:TextArea width="100%" height="100%" editable="false"/>
 </mx:VBox>
