--- a/trunk/HsGameSaver/src/HsGameSaver.mxml
+++ b/trunk/HsGameSaver/src/HsGameSaver.mxml
@@ -2,11 +2,12 @@
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
 	width="800" height="600"
 	applicationComplete="completeHandler()" xmlns:views="org.hamster.gamesaver.controls.views.*"
-	backgroundColor="#EEEEEE">
+	backgroundColor="#EEEEEE" xmlns:units="org.hamster.gamesaver.controls.units.*">
 	<mx:Metadata>
 		[ResourceBundle("main")]
 	</mx:Metadata>
 	<mx:Style source="/org/hamster/gamesaver/css/Main.css" />
 	<mx:Script source="HsGameSaverAs.as" />
 	<views:PathConfView id="pathConfView" width="100%" height="100%" />
+	<units:GameUnit />
 </mx:WindowedApplication>
