--- a/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
+++ b/HsGameSaver/src/org/hamster/gamesaver/controls/units/GameUnit.mxml
@@ -23,9 +23,9 @@
 		</mx:FormItem>
 		<mx:FormItem label="{resourceManager.getString('main','filters')}"
 			direction="horizontal" width="100%">
-			<buttons:AddButton id="addFilterButton" width="20" height="20" />
+			<buttons:AddButton id="addFilterButton" width="20" height="20" 
+				 click="addFilterClickHandler()"/>
 			<mx:HBox id="filterContainer" width="100%" height="20">
-				<units:FilterUnit />
 			</mx:HBox>
 		</mx:FormItem>
 	</mx:Form>
