--- a/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/FilterUnit.mxml
+++ b/trunk/HsGameSaver/src/org/hamster/gamesaver/controls/units/FilterUnit.mxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" minWidth="65"
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml"
 	height="20" horizontalGap="5" verticalAlign="middle"
 	xmlns:base="org.hamster.gamesaver.controls.base.*" 
 	xmlns:buttons="org.hamster.gamesaver.controls.buttons.*"
-	creationComplete="completeHandler()">
+	creationComplete="completeHandler()" mouseWheel="mouseWheelHandler()">
 	<mx:Script source="FilterUnitAs.as" />
 	<base:BaseTextInput id="filterTextInput" height="20" 
-		change="typeChangeHandler()" 
+		change="inputChangeHandler()" width="40"
+		applyChange="applyChangeHandler(event)"
 		focusIn="inputFocusInHandler()" focusOut="inputFocusOutHandler()"/>
-	<buttons:DeleteButton width="18" height="18" />
+	<buttons:DeleteButton width="18" height="18" click="deleteBtnClickHandler()" />
 </mx:HBox>
