--- a/HsGameSaver/src/HsGameSaver.mxml
+++ b/HsGameSaver/src/HsGameSaver.mxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute"
-	width="800" height="600"
+	width="800" height="600" showStatusBar="false"
+	verticalScrollPolicy="off" horizontalScrollPolicy="off"
 	applicationComplete="completeHandler()" xmlns:views="org.hamster.gamesaver.controls.views.*"
-	backgroundColor="#EEEEEE" xmlns:units="org.hamster.gamesaver.controls.units.*">
+	backgroundColor="#EEEEEE" xmlns:units="org.hamster.gamesaver.controls.units.*" xmlns:containers="org.hamster.gamesaver.controls.containers.*">
 	<mx:Metadata>
 		[ResourceBundle("main")]
 	</mx:Metadata>
 	<mx:Style source="/org/hamster/gamesaver/css/Main.css" />
 	<mx:Script source="HsGameSaverAs.as" />
 	<views:PathConfView id="pathConfView" width="100%" height="100%" />
-	<units:GameUnit />
+	<containers:GameContainer />
 </mx:WindowedApplication>
