--- a/HsGameSaver/src/org/hamster/gamesaver/controls/popup/ConfigurePopup.mxml
+++ b/HsGameSaver/src/org/hamster/gamesaver/controls/popup/ConfigurePopup.mxml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" 
-	width="400" height="300" backgroundColor="#000000"
+<mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" verticalAlign="middle"
+	width="550" height="150" backgroundColor="#000000"
 	borderColor="0xFFFFFF" borderStyle="solid" borderThickness="2"
-	verticalScrollPolicy="off" horizontalScrollPolicy="off" xmlns:base="org.hamster.gamesaver.controls.base.*" xmlns:buttons="org.hamster.gamesaver.controls.buttons.*">
+	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
+	xmlns:base="org.hamster.gamesaver.controls.base.*"
+	xmlns:buttons="org.hamster.gamesaver.controls.buttons.*"
+	creationComplete="completeHandler()">
 	<mx:Script source="ConfigurePopupAs.as" />
-	<mx:Form color="#FFFFFF" labelWidth="100">
-		<mx:FormHeading label="{resourceManager.getString('main','configuration')}" />
+	<mx:Form color="#FFFFFF" labelWidth="80" 
+		paddingLeft="0" paddingRight="0" paddingTop="0" paddingBottom="0">
+		<mx:FormHeading label="{resourceManager.getString('main','configuration')}"
+			fontWeight="normal" />
 		<mx:FormItem label="{resourceManager.getString('main','language')}"
 			direction="horizontal">
-			<mx:ComboBox id="languageComboBox" 
+			<mx:ComboBox id="languageComboBox" height="20"
 				dataProvider="{[{label:'中文', data: 'zh_CN'},{label:'English', data: 'en_US'}]}"
 				change="languageChangeHandler()" />
 		</mx:FormItem>
-		<mx:FormItem label="{resourceManager.getString('','')}"
+		<mx:FormItem label="{resourceManager.getString('main','outputFolder')}"
 			direction="horizontal">
-			<base:BaseTextInput id="targetCopyPathInput" />
-			<buttons:FolderButton id="targetCopyPathButton" width="20" height="20" />
+			<base:BaseTextInput id="targetCopyPathInput" width="100%" />
+			<buttons:FolderButton id="targetCopyPathButton" width="20" height="20"
+				 click="browseCopyPathHandler()" />
 		</mx:FormItem>
 	</mx:Form>
-	<mx:HBox width="100%" height="30" horizontalAlign="right">
+	<mx:HBox width="100%" height="30" horizontalAlign="right" paddingRight="10">
+		<buttons:WarningButton id="warningButton" 
+			width="30" height="30" visible="false" />
 		<buttons:OkayButton width="30" height="30" click="closeSelfHandler()" />
 	</mx:HBox>
 	
