--- a/HsGameSaver/src/org/hamster/gamesaver/css/Main.css
+++ b/HsGameSaver/src/org/hamster/gamesaver/css/Main.css
@@ -1,10 +1,32 @@
 global {
-	fontSize : 12;
+	fontFamily: fzmwFont;
+	fontSize : 14;
+	themeColor : #333333;
 }
 
 .h1 {
 	fontSize : 14;
 	fontWeight : bold;
+}
+
+ComboBox {
+	cornerRadius : 0;
+	fillAlphas : 0.4, 0.4;
+	fillColors : #222222, #222222;
+	textRollOverColor : #FFFFFF;
+	textSelectedColor : #FFFFFF;
+	rollOverColor : #666666;
+	selectionColor : #222222;
+	borderColor : #000000;
+	borderThickness : 0;
+	highlightAlphas : 0.8, 0.6;
+	dropdownStyleName : dropdownComboBox;
+	fontWeight : normal;
+}
+
+.dropdownComboBox {
+	backgroundColor: #444444;
+	fontWeight : normal;
 }
 
 /*@font-face {
