--- a/HsMagicTheGathering/src/org/hamster/magic/menu/MenuModule.mxml
+++ b/HsMagicTheGathering/src/org/hamster/magic/menu/MenuModule.mxml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Module xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" width="800" height="600">
+	layout="absolute" width="800" height="600"
+	verticalScrollPolicy="off" horizontalScrollPolicy="off"
+	xmlns:buttons="org.hamster.magic.menu.controls.buttons.*"
+	xmlns:views="org.hamster.magic.menu.controls.views.*">
 	<mx:Script source="MenuModuleAs.as" />
+	<mx:Canvas id="backgroundCanvas" width="100%" height="100%"
+		verticalScrollPolicy="off" horizontalScrollPolicy="off"
+		backgroundImage="@Embed(source='/org/hamster/magic/menu/assets/menu_background.jpg')" />
+	<buttons:MenuButton id="startGameButton"
+		textIcon="@Embed(source='/org/hamster/magic/menu/assets/buttons/text_startGame.png')" 
+		y="455" x="550" click="startGame()" />
+	<buttons:MenuButton id="gameSettingsButton" 
+		textIcon="@Embed(source='/org/hamster/magic/menu/assets/buttons/text_gameSettings.png')" 
+		y="510" x="550" />
 </mx:Module>
